<resources>
    <string name="app_name">Login app</string>
    <string name="reset_password">reset password</string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="password_change">password change</string>
    <string name="textview">TextView</string>
    <string name="logout">logout</string>
    <string name="registration">registration</string>
    <string name="e_mail">E-mail</string>
    <string name="emailpassreset">E-mail</string>
    <string name="emailsendpassreset">send email</string>
    <string name="newpassword">New password</string>
    <string name="changepassword">change</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="number">1 2 3 4 5 6 7 8 9 0</string>
</resources>